add Bootstrap and layout.tag for jsp file

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/ingame/ingame.jsp=UTF-8
 encoding//src/game/MySQLUtilities.java=UTF-8
 encoding//src/game/User.java=UTF-8
